# zzh

./: Cargo.toml  LICENSE  README.MD  flake.nix
src/: cli.rs  config.rs  history.rs  main.rs  menu.rs  ssh.rs
