[package]
name = "zzh"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Daniel Pavalache <danielpavalache27@gmail.com>"]
description = """
ZZH is a cli tool that wraps SSH. It's not a drop in replacement, 
just a more enjoyable way of managing connections
"""
homepage = "https://github.com/Sheol27/zzh"
repository = "https://github.com/Sheol27/zzh"


[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
ctrlc = "3.4.5"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
regex = "1.11.1"
